# PySide6-SiliconUI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README_zh.md  coding_standard.md
examples/Gallery for siui/: start.py  ui.py
examples/Gallery for siui/components/option_card/: plane.py
examples/Gallery for siui/components/page_about/: page_about.py
examples/Gallery for siui/components/page_container/: page_container.py
examples/Gallery for siui/components/page_dialog/: page_dialog.py
examples/Gallery for siui/components/page_functional/: page_functional.py
examples/Gallery for siui/components/page_homepage/: page_homepage.py
examples/Gallery for siui/components/page_icons/: page_icons.py
examples/Gallery for siui/components/page_page_control/: page_control.py
examples/Gallery for siui/components/page_refactor/: example_menu.py  example_popover.py  page_refactor.py
examples/Gallery for siui/components/page_widgets/: page_widgets.py
examples/button/: demo_button.py
siui/: __init__.py  siui_typing.py
siui/components/: button.py  chart.py  combobox_.py  container.py  editbox.py  graphic.py  label.py  layout.py  menu_.py  popover.py  progress_bar_.py  slider_.py
siui/components/menu/: option.py
siui/components/menu/abstracts/: menu.py  (+1 more)
siui/components/spinbox/: spinbox.py
siui/components/titled_widget_group/: titled_widget_group.py
siui/components/widgets/: container.py  label.py  timedate.py
siui/core/: animation.py  event_filter.py  globals.py  painter.py
siui/gui/: font.py
siui/gui/icons/: parser.py
(+11 files in other folders)
