[project]
name = "PySide6-SiliconUI"
version = "1.0.1"
authors = [
    { name = "ChinaIceF", email = "ChinaIceF@outlook.com" },
    { name = "rainzee wang", email = "rainzee.w@gmail.com" },
    { name = "H1DDENADM1N", email = "65646535+H1DDENADM1N@users.noreply.github.com" },
]
description = "Default template for PDM package"
readme = "README.md"
license = { file = "LICENSE", text = "GPLv3" }
requires-python = "==3.12.*"
dependencies = [
    "PySide6==6.6.3.1",
    "typing-extensions>=4.12.2",
    "numpy==1.26.4",
]

[project.urls]
Repository = "https://github.com/H1DDENADM1N/PySide6-SiliconUI"

[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
lint = ["ruff>=0.5.0"]
build = ["nuitka>=2.3.10"]
profile = ["viztracer>=0.16.3"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["I", "E", "W", "F", "C", "Q", "PT", "UP", "PYI", "T20"]

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "standard"
